# oXu

./: .gitignore  .gitmodules  CMakeLists.txt  Doc  LICENSE  Main.cpp  Makefile  README.md  configure.sh  dependencies.sh  deps.sh  main.cpp  oXu  oXu!
.github/workflows/: ccpp.yml
gitFiles/: Main.cpp  StandardCursor.cpp  Texture.h  approachCircle.h  beatMap.h  beatMapParser.h  createCircle.h  graphicsHandler.hpp  hitCircle.h  hitObject.h  hitObjectLoader.h  playField.h  slider.h
include/oxu/: game.hpp  game_config.hpp
include/oxu/audio/: player.hpp  sound.hpp
include/oxu/audio/openal/: core.hpp
include/oxu/beatmap/: beatmap.hpp  beatmapParser.hpp  song.hpp  songManager.hpp
include/oxu/beatmap/components/: hitCircle.hpp  hitObject.hpp  playField.hpp  slider.hpp  types.hpp
include/oxu/beatmap/sections/: difficulty.hpp  events.hpp  metadata.hpp
include/oxu/core/: fs.hpp  logger.hpp  window.hpp
include/oxu/core/threading/: thread.hpp
include/oxu/framework/: framework.hpp  fs.hpp  ignore_ret.hpp  logger.hpp  status.hpp  window.hpp
include/oxu/framework/audio/: handler.hpp
include/oxu/framework/graphics/: genericBackend.hpp  handler.hpp  png.hpp  renderer.hpp  shader_type.hpp  texture.hpp
include/oxu/framework/threading/: pipeline.hpp  request.hpp  thread.hpp
include/oxu/framework/utils/: timer.hpp  vector2.hpp
include/oxu/graphics/: genericBackend.hpp  handler.hpp  renderer.hpp  texture.hpp
include/oxu/graphics/opengl/: backend.hpp  core.hpp  indexBuffer.hpp  texture.hpp  vertexArrayObject.hpp  vertexLayout.hpp
include/oxu/input/: handler.hpp
include/oxu/skin/: config.hpp  skin.hpp  skinManager.hpp
include/oxu/utils/: timer.hpp
res/shaders/: tex.glsl
skins/: skin.ini
songs/829296 mafumafu - Inochi ni Kirawarete Iru/: mafumafu - Inochi ni Kirawarete Iru. (KazuhikoRei) [Haruki's Easy].osu
songs/889855 GALNERYUS - RAISE MY SWORD/: GALNERYUS - RAISE MY SWORD (Sotarks).osb
src/: Main.cpp  game.cpp  game_config.cpp  main.cpp  outpu
src/audio/: handler.cpp  sound.cpp
src/audio/openal/: core.cpp
src/beatmap/: beatmap.cpp  beatmapInfo.cpp  beatmapManager.cpp  beatmapManager.hpp  beatmapParser.cpp  hitObjectsInfo.cpp  hitObjectsInfo.hpp  mapInfo.cpp  mapInfo.hpp  mapManager.cpp  mapManager.hpp  objectInfo.cpp  objectInfo.hpp  song.cpp  songManager.cpp
src/beatmap/components/: hitCircle.cpp  hitObject.cpp  playField.cpp  slider.cpp
src/components/: cursor.cpp  cursor.hpp  gameComponents.cpp  gameComponents.hpp  textures.cpp  textures.hpp
src/components/game/: hitCircle.cpp  hitCircle.hpp  playField.cpp  playField.hpp  slider.cpp  slider.hpp
src/core/: fs.cpp  game.cpp  game.hpp  logger.cpp  scaling.cpp  scaling.hpp  sceneManager.cpp  sceneManager.hpp  status.cpp  window.cpp
src/core/threading/: thread.cpp
src/core/threading/pipeline/: pipeline.cpp  request.cpp
src/framework/: framework.cpp  fs.cpp  logger.cpp  status.cpp  window.cpp
src/framework/audio/: handler.cpp
src/framework/graphics/: handler.cpp  png.cpp  renderer.cpp  texture.cpp
src/framework/graphics/opengl/: backend.cpp  core.cpp  indexBuffer.cpp  shader.cpp  texture.cpp  vertexArrayObject.cpp  vertexBuffer.cpp  vertexLayout.cpp
src/framework/threading/: pipeline.cpp  request.cpp  thread.cpp
src/framework/utils/: timer.cpp
src/graphics/: handler.cpp  renderer.cpp  texture.cpp
src/graphics/opengl/: backend.cpp  core.cpp  indexBuffer.cpp  shader.cpp  texture.cpp  vertexArrayObject.cpp  vertexBuffer.cpp  vertexLayout.cpp
src/graphics/utils/: png.cpp
src/handlers/: graphicsHandler.cpp  graphicsHandler.hpp  inputHandler.cpp  inputHandler.hpp  soundHandler.cpp  soundHandler.hpp
src/input/: handler.cpp
src/oXu/: game.cpp  game.hpp  main.cpp
src/oXu/audio/: handler.cpp  handler.hpp  player.hpp  sound.cpp
src/oXu/audio/openal/: core.cpp  core.hpp
src/oXu/beatmap/: beatmap.cpp  beatmap.hpp  beatmapInfo.hpp  beatmapManager.cpp  beatmapManager.hpp  beatmapParser.cpp  beatmapParser.hpp  hitObjectsInfo.cpp  hitObjectsInfo.hpp  song.cpp  song.hpp  songManager.cpp  songManager.hpp
src/oXu/beatmap/components/: approachCircle.cpp  approachCircle.hpp  types.hpp  (+8 more)
src/oXu/components/: cursor.cpp  cursor.hpp  text.cpp  text.hpp  textures.cpp  textures.hpp
src/oXu/core/: dirs.cpp  dirs.hpp  fs.cpp  fs.hpp  game.cpp  game.hpp  logger.cpp  oXu.cpp  oXu.hpp  scaling.cpp  scaling.hpp  status.cpp  status.hpp  statusCodes.cpp  statusCodes.hpp  window.cpp  window.hpp
src/oXu/graphics/: genericBackend.hpp  handler.cpp  handler.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/oXu/handlers/: graphics.cpp  graphics.hpp  graphicsHandler.cpp  graphicsHandler.hpp  input.cpp  inputHandler.cpp  inputHandler.hpp  sound.cpp  sound.hpp  soundHandler.cpp  soundHandler.hpp
src/oXu/input/: handler.cpp  handler.hpp
src/oXu/skin/: config.cpp  skin.cpp  skin.hpp  skinManager.cpp  skinManager.hpp
src/oXu/utils/: logger.cpp  logger.hpp  pathCalculator.cpp  pathCalculator.hpp  timer.cpp  timer.hpp  vector2.hpp
src/oxuCore/: button.h  game.cpp  game.hpp  gameComponents.cpp  gameComponents.hpp  sceneManager.cpp  sceneManager.h  sceneManager.hpp  textures.cpp  textures.hpp
src/oxuGameComponents/: approachCircle.cpp  approachCircle.h  approachCircle.hpp  cursor.cpp  cursor.hpp  hitCircle.cpp  hitCircle.h  hitCircle.hpp  mapSelectButton.cpp  mapSelectButton.hpp  playField.cpp  playField.h  playField.hpp  slider.h  timer.cpp  timer.hpp
src/oxuGameHandlers/: beatMapParser.h  graphicsHandler.cpp  graphicsHandler.hpp  hitObjectLoader.h  hitObjectManager.cpp  hitObjectManager.h  hitObjectManager.hpp  inputHandler.cpp  inputHandler.hpp  mapManager.cpp  mapManager.hpp  soundHandler.cpp  soundHandler.h  soundHandler.hpp
src/oxuUtils/: log.cpp  log.hpp  vector2.cpp  vector2.hpp
src/skin/: config.cpp  skin.cpp  skinManager.cpp  skinManager.hpp
src/utils/: logger.cpp  logger.hpp  pathCalculator.hpp  timer.cpp  vector2.cpp  vector2.hpp
windows/: Main.cpp
windows/oxuGameComponents/: hitCircle.h  slider.h
windows/oxuGameHandlers/: graphicsHandler.hpp  hitObjectLoader.h
(+65 files in other folders)
